fix: CSS file spacing

--- a/css/style.css
+++ b/css/style.css
@@ -5,10 +5,12 @@
   color: white;
   transition: 0.3s ease-in-out;
 }
+
 html,
 body {
   min-height: 100vh;
 }
+
 .container {
   position: absolute;
   height: 100vh;
@@ -16,6 +18,7 @@ body {
   min-height: 100vh;
   overflow-y: auto;
 }
+
 header {
   position: absolute;
   top: 0;
@@ -26,6 +29,7 @@ header {
   align-items: center;
   justify-content: space-between;
 }
+
 .logo {
   margin-left: 50px;
   font-size: 30px;
@@ -33,16 +37,19 @@ header {
   font-weight: bold;
   color: white;
 }
+
 .searchBox {
   margin-right: 50px;
   display: flex;
 }
+
 .searchBox img {
   width: 40px;
   background-color: rgba(255, 255, 255, 0.796);
   border-radius: 50%;
   cursor: pointer;
 }
+
 .searchBox input {
   margin-right: 8px;
   border-radius: 20px;
@@ -54,6 +61,7 @@ header {
   font-size: 15px;
   padding: 5px 15px;
 }
+
 .content {
   position: absolute;
   top: 200px;
@@ -63,26 +71,31 @@ header {
   height: 50vh;
   width: 80vw;
 }
+
 #city {
   font-weight: 600;
   font-size: 60px;
   margin-bottom: 10px;
 }
+
 #cel,
 #far {
   font-size: 60px;
   font-weight: bolder;
   font-family: sans-serif;
 }
+
 #temp {
   margin-bottom: 10px;
 }
+
 #main,
 #description,
 #timezone {
   font-size: 20px;
   font-weight: lighter;
 }
+
 .details {
   display: none;
   background: rgba(255, 255, 255, 0.25);
@@ -90,22 +103,26 @@ header {
   backdrop-filter: blur(8px);
   border-radius: 20px;
 }
+
 #img img {
   width: 80px;
   margin-bottom: 20px;
 }
+
 .details {
   padding: 50px 50px;
   width: 370px;
   margin-left: 50px;
   height: 350px;
 }
+
 .-detail {
   margin-bottom: 30px;
   font-size: 18px;
   color: white;
   font-weight: 400;
 }
+
 #error {
   position: absolute;
   top: 50%;
@@ -127,4 +144,9 @@ header {
   .details {
     margin-left: 0px;
   }
+}
+
+/* For mobile devices */
+@media (max-width: 576px) {
+  /* Add your mobile styles here */
 }
